--- a/src/slyles/pages.css
+++ b/src/slyles/pages.css
@@ -1,7 +1,15 @@
 .top {
   display: flex;
+  justify-content: center;
   text-decoration: none;
   font-size: 2rem;
+}
+
+.flexMid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
 
 .orange {
@@ -26,4 +34,26 @@
 
 .violet {
   color: violet;
+}
+
+.btnAws {
+  color: white;
+  width: 10rem;
+  height: 2rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: cornflowerblue;
+  font-weight: bold;
+  margin-right: 1rem;
+}
+
+.btnAwsGreen {
+  color: white;
+  width: 10rem;
+  height: 2rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: green;
+  font-weight: bold;
+  margin-right: 1rem;
 }
